Made some progress but stuck on the first problem set :(

--- a/NumericalMathematicsAndComputing/Chapter1.ipynb
+++ b/NumericalMathematicsAndComputing/Chapter1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,137 @@
     "\n",
     "# Problem 6\n",
     "def polynomial_operations(n):\n",
-    "    return n*2 # d+x(c+x(b+x(a)))"
+    "    return n*2 # d+x(c+x(b+x(a)))\n",
+    "\n",
+    "# Problem 8\n",
+    "def optimize_polynomial(exponents, coefficients, variable=\"(x)\", expo=\"{}\"): #return latex\n",
+    "    string = \"\"\n",
+    "    components = len(exponents)\n",
+    "    zipped_pairs = zip(exponents, coefficients)\n",
+    " \n",
+    "    coefficients = [x for _, x in sorted(zipped_pairs)]\n",
+    "    exponents.sort()\n",
+    "\n",
+    "    for i in range(components-2, -1, -1):\n",
+    "        if (exponents[i] == exponents[i+1]):\n",
+    "            exponents.pop(i+1)\n",
+    "            coefficients[i] += coefficients[i+1]\n",
+    "            coefficients.pop(i+1)\n",
+    "            components -= 1\n",
+    "\n",
+    "    new_exponents = []\n",
+    "\n",
+    "    exponent = 0\n",
+    "    for i in range(components):\n",
+    "        new_exponents.append(exponents[i]-exponent)\n",
+    "        exponent += exponents[i]-exponent\n",
+    "\n",
+    "    for i in range(components-1, -1, -1):\n",
+    "        form = \"{variable}^{{{exponent}}}({coefficient} + {existing})\"\n",
+    "        if i == components-1:\n",
+    "            form = \"{variable}^{{{exponent}}}({coefficient}{existing})\"\n",
+    "\n",
+    "        string = form.format(\n",
+    "            coefficient=coefficients[i], variable=variable, exponent=expo.format(new_exponents[i]), existing=string)\n",
+    "\n",
+    "    return string\n",
+    "\n",
+    "# Problem 9\n",
+    "def efficient_exp(x):\n",
+    "    # Alternativly use the other poly and store exp(x) which cuts down the opperations count by like 2\n",
+    "    return 11 + 9 * math.exp(x) + 7*math.exp(2*x) + 5 * math.exp(3*x)\n",
+    "\n",
+    "# Problem 10\n",
+    "def problem_10(a, b, n):\n",
+    "    result = 0\n",
+    "    for i in range(n):\n",
+    "        product = 1\n",
+    "        for j in range(i+1):\n",
+    "            product *= a[j]\n",
+    "        result += product / b[i]\n",
+    "    return result\n",
+    "\n",
+    "# Problem 11\n",
+    "def problem_11_a(x, n):\n",
+    "    result = 0\n",
+    "    for k in range(n):\n",
+    "        result += k* (x**k)\n",
+    "    return result\n",
+    "\n",
+    "def problem_11_b(x, n):\n",
+    "    result = 0\n",
+    "    for i in range(1, n+1):\n",
+    "        product = 1\n",
+    "        for j in range(1, i+1):\n",
+    "            product *= math.pow(x, n-j+i)\n",
+    "        result += product\n",
+    "    return result\n",
+    "\n",
+    "def problem_11_c(x, n):\n",
+    "    product = 1\n",
+    "    for i in range(1, n+1):\n",
+    "        summ = 0\n",
+    "        for j in range(1, i+1):\n",
+    "            summ += x[j]\n",
+    "        product *= summ\n",
+    "    return product\n",
+    "\n",
+    "def problem_11_d(t, a, x, n):\n",
+    "    result = 0\n",
+    "    for i in range(1, n+1):\n",
+    "        product = 1\n",
+    "        for j in range(1, i):\n",
+    "            product *= t-x[j]\n",
+    "        result += product * a[i]\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tests/Answers for 1.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "approx_pi [75948, 24175]\n",
+      "get_possible_values_from_relative_error [0.5972277227722772, 0.6092929292929292]\n",
+      "relative_error 6.00000000000378e-05\n",
+      "ways_to_compute_pi [3.141592653589793, 3.141592653589793, 3.141592653589793, 3.141592653589793]\n",
+      "add_2d_matrix [45, 45, 45, 45, 45]\n",
+      "polynomial_operations 6\n",
+      "(x-1)^{5}(3 + (x-1)^{4}(7))\n",
+      "(x+2)^{3}(6 + (x+2)^{4}(9 + (x+2)^{8}(3 + (x+2)^{16}(-1))))\n",
+      "(x+2)^{7}(-3 + (x+2)^{10}(10 + (x+2)^{20}(-10 + (x+2)^{90}(1))))\n",
+      "e^{0x}(11 + e^{1x}(9 + e^{1x}(7 + e^{1x}(5))))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from IPython.display import display, Math, Latex\n",
+    "\n",
+    "print(\"approx_pi\", approx_pi(.0000001)) # Problem 1\n",
+    "print(\"get_possible_values_from_relative_error\", get_possible_values_from_relative_error(0.6032, .01)) # Problem 2\n",
+    "print(\"relative_error\", relative_error(5, 4.9997)) # Problem 3\n",
+    "print(\"ways_to_compute_pi\", ways_to_compute_pi()) # Problem 4\n",
+    "print(\"add_2d_matrix\", add_2d_matrix(np.array([(1, 2, 3), (4, 5, 6), (7, 8, 9)]))) # Problem 5\n",
+    "print(\"polynomial_operations\", polynomial_operations(3)) # Problem 6\n",
+    "\n",
+    "# Problem 8\n",
+    "print(optimize_polynomial([5, 9], [3, 7], \"(x-1)\"))\n",
+    "print(optimize_polynomial([3, 7, 15, 31], [6, 9, 3, -1], \"(x+2)\"))\n",
+    "print(optimize_polynomial([127, 37, 37, 17, 7], [1, -5, -5, 10, -3], \"(x+2)\"))\n",
+    "\n",
+    "# Problem 9\n",
+    "print(optimize_polynomial([3, 2, 1, 0], [5, 7, 9, 11], variable=\"e\", expo=\"{}x\"))\n"
    ]
   },
   {
@@ -128,40 +258,30 @@
     "$p(x) = x^{32}$ &rarr; ${{{{x^2}^2}^2}^2}^2$\n",
     "\n",
     "b. \\\n",
-    "$p(x) = 3(x-1)^5+7(x-1)^9$"
+    "$p(x) = 3(x-1)^5+7(x-1)^9$ &rarr; $(x-1)^{5}(3 + (x-1)^{4}(7))$\n",
+    "\n",
+    "c. \\\n",
+    "$(x+2)^{3}(6 + (x+2)^{4}(9 + (x+2)^{8}(3 + (x+2)^{16}(-1))))$\n",
+    "\n",
+    "d. \\\n",
+    "$(x+2)^{7}(-3 + (x+2)^{10}(10 + (x+2)^{20}(-10 + (x+2)^{90}(1))))$\n",
+    "\n",
+    "**Problem 9**\n",
+    "\n",
+    "$e^{0x}(11 + e^{1x}(9 + e^{1x}(7 + e^{1x}(5))))$\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tests for 1.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "approx_pi [75948, 24175]\n",
-      "get_possible_values_from_relative_error [0.5972277227722772, 0.6092929292929292]\n",
-      "relative_error 6.00000000000378e-05\n",
-      "ways_to_compute_pi [3.141592653589793, 3.141592653589793, 3.141592653589793, 3.141592653589793]\n",
-      "add_2d_matrix [45, 45, 45, 45, 45]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"approx_pi\", approx_pi(.0000001))\n",
-    "print(\"get_possible_values_from_relative_error\", get_possible_values_from_relative_error(0.6032, .01))\n",
-    "print(\"relative_error\", relative_error(5, 4.9997))\n",
-    "print(\"ways_to_compute_pi\", ways_to_compute_pi())\n",
-    "print(\"add_2d_matrix\", add_2d_matrix(np.array([(1, 2, 3), (4, 5, 6), (7, 8, 9)])))\n",
-    "print(\"polynomial_operations\", polynomial_operations(3))\n"
+    "**Problem 12**\n",
+    "\n",
+    "a. \\\n",
+    "$v = a_0 + \\sum_{i=1}^{n}xa_i$\n",
+    "\n",
+    "b. \\\n",
+    "$v = a_n\\prod_{i=1}^n(x+\\frac{a_{n-1}}{v})$"
    ]
   }
  ],
