--- a/NumericalMathematicsAndComputing/Chapter1.ipynb
+++ b/NumericalMathematicsAndComputing/Chapter1.ipynb
@@ -281,7 +281,12 @@
     "$v = a_0 + \\sum_{i=1}^{n}xa_i$\n",
     "\n",
     "b. \\\n",
-    "$v = a_n\\prod_{i=1}^n(x+\\frac{a_{n-1}}{v})$"
+    "$v = a_n\\prod_{i=1}^n(x+\\frac{a_{n-1}}{v})$\n",
+    "\n",
+    "c. \\\n",
+    "$v = \\sum_{i=1}^{n} (a_n\\prod_{j=1}^{i}x)$\n",
+    "\n",
+    "d. \\\n"
    ]
   }
  ],
